--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -22,6 +22,9 @@ jobs:
         run: |
           pip install mkdocs mkdocs-material mkdocs-static-i18n[material] mkdocs-video
 
+      - name: Add CNAME for custom domain
+        run: echo "grow.regenrate.com" > docs/CNAME
+
       - name: Deploy to GitHub Pages
         run: |
           mkdocs gh-deploy --force
