--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs mkdocs-material mkdocs-static-i18n[material] mkdocs-video PIL cairosvg
+          pip install mkdocs mkdocs-material mkdocs-static-i18n[material] mkdocs-video pillow cairosvg
 
       - name: Deploy to GitHub Pages
         run: |
